# first-party-oracle

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.sh  test.sh
oracle/: Cargo.toml  notes
oracle/src/: fungible_token.rs  fungible_token_handler.rs  fungible_token_receiver.rs  helpers.rs  lib.rs  provider.rs  storage_manager.rs
oracle/tests/it/: basic_tests.rs  main.rs  simulation_tests.rs
oracle/tests/it/utils/: account_utils.rs  deposit.rs  lib.rs  oracle_utils.rs  requester_utils.rs  token_utils.rs
requester/src/: Cargo.toml  lib.rs  oracle_handler.rs
scripts/: build.sh  deploy_requester.sh  deploy_requestor.sh  get_request.sh  new_request.sh  request.sh  request_arb.sh  reset_account.sh  response.sh  test.sh
src/: fungible_token_handler.rs  lib.rs  notes  types.rs
token/: Cargo.toml
token/src/: fungible_token_core.rs  internal.rs  lib.rs  storage_manager.rs
