[package]
name = "request-interface"
version = "0.2.0"
authors = ["Flux Contributors <contributors@flux.xyz>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
flux-sdk = { git = "https://github.com/fluxprotocol/flux-sdk-rs.git", rev="64e5e6e5e4202457f9f0789c1f0524c6a7c0aca2" }
serde = "1.0.118"
