[package]
name = "request-interface"
version = "0.2.0"
authors = ["Flux Contributors <contributors@flux.xyz>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
flux-sdk = { git = "https://github.com/fluxprotocol/flux-sdk-rs.git", rev="aadde819566bc5306e6f17a9e61cba3f895dfb90" }
serde = "1.0.118"
