[package]
name = "request-interface"
version = "0.2.1"
authors = ["Flux Contributors <contributors@flux.xyz>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
flux-sdk = { git = "https://github.com/fluxprotocol/flux-sdk-rs.git", rev="433b3297eaac4600b8c8a8bb2673081480379511" }
serde = "1.0.118"
